--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #c9d1dc;    
+    background-color: #e4e6e1;    
     font-family: 'Roboto', sans-serif;
 }
 
@@ -7,16 +7,31 @@ body {
     text-align: center;
     float: left;
     width: 15%;
+    margin-top: 15%;
+    background-color: #646162;
 }
 
 .principal {
     float: right;
     clear: right;
     width: 85%;
-    text-align: right;
+    text-align: center;
 }
 
 .navegacao {
     list-style: none;
     padding: 0;
+}
+
+main h1{
+    font-size: 60px;
+    background-color: #d6654f;
+    color: #FFF;
+    text-align: center;
+    padding: 25px;
+    margin: 0;
+    border-bottom: 10px solid #646162;
+    font-family: "Arial", "Open Sans Condensed", sans-serif;
+    font-weight: bold;
+    text-transform: uppercase;
 }
