--- a/css/index.css
+++ b/css/index.css
@@ -7,7 +7,6 @@ body {
     text-align: center;
     float: left;
     width: 15%;
-    margin-top: 15%;
     background-color: #646162;
 }
 
@@ -21,6 +20,7 @@ body {
 .navegacao {
     list-style: none;
     padding: 0;
+    padding-top: 15%;
 }
 
 main h1{
@@ -34,4 +34,19 @@ main h1{
     font-family: "Arial", "Open Sans Condensed", sans-serif;
     font-weight: bold;
     text-transform: uppercase;
+}
+
+a{
+    color: #FFF;
+    text-decoration: none;
+}
+
+li{
+    padding: 10px;
+    background-color: black;
+    margin: 10px;
+}
+
+h2{
+    padding-top: 10%;
 }
